// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutation authenticateUser success: false state 1`] = `
Object {
  "data": Object {
    "authenticateUser": Object {
      "responseMessage": "Error creating user",
      "success": false,
      "token": null,
      "user": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutation authenticateUser success: true state 1`] = `
Object {
  "data": Object {
    "authenticateUser": Object {
      "responseMessage": null,
      "success": true,
      "token": "token",
      "user": Object {
        "accountSetupState": "SET_PIN",
        "id": "userId",
        "isNewAccount": true,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutation setPin success 1`] = `
Object {
  "data": Object {
    "setPin": Object {
      "responseMessage": null,
      "success": true,
      "user": Object {
        "id": "0",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
